# ticket_demo

./: .dockerignore  .gitignore  Dockerfile.service  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pom.xml
audit-service/: pom.xml
audit-service/src/main/resources/: application.yml
backend/: Dockerfile  README.md  pom.xml
backend/src/main/resources/: application.yml  data.sql
docker/grafana/dashboards/: spring-boot.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/nacos/: audit-service.yaml  event-service.yaml  gateway-service.yaml  import-config.sh  order-service.yaml  tenant-service.yaml
docker/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  RUST_ARCHITECTURE.md
e2e/: .gitignore  Dockerfile  conftest.py  pyproject.toml
e2e/tests/: capture_screenshots.py  test_api.py  test_app.py  test_z_rate_limit.py
event-service/: pom.xml
event-service/src/main/resources/: application.yml  data.sql
frontend/: Dockerfile  index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  eventApi.ts  orderApi.ts  tenantApi.ts
frontend/src/components/: EventList.tsx  OrderList.tsx  TenantSelector.tsx
frontend/src/types/: ticket.ts
gateway-service/: pom.xml
gateway-service/src/main/resources/: application.yml
order-service/: pom.xml
order-service/src/main/resources/: application.yml
tenant-service/: pom.xml
tenant-service/src/main/resources/: application.yml  data.sql
ticket-api/: pom.xml
ticket-common/: pom.xml
(+87 files in other folders)
